22: Configurar Base de datos para test
Task-Url: http://github.com/ramsodev/DocInDita/issues/22